# socket-programming

./: Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  server.py
http_socket/: client.py  server.py
web_socket/: bash_client.py  client.py  html_client.html  server.py
